<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="6"
    android:background="@color/grey_300"
    tools:context=".ui.InformationFragment">

    <TextView
        android:id="@+id/text_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18dp"
        android:text="@string/artist_name"/>

    <TextView
        android:id="@+id/text_artist_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18dp"
        android:text="@string/artist_birth"/>

    <TextView
        android:id="@+id/text_artist_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18dp"
        android:text="@string/artist_phone"/>

    <TextView
        android:id="@+id/text_artist_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18dp"
        android:text="@string/artist_email"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_home"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/icon_home"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/text_artist_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toRightOf="@id/img_home"
            android:textSize="18dp"
            android:text="@string/artist_website"
            android:textColor="@color/colorAccent"
            android:clickable="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_facebook"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/icon_facebook"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/text_artist_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_facebook"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:text="@string/artist_social"
            android:textColor="@color/colorAccent"
            android:clickable="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_like"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_like"/>

        <TextView
            android:id="@+id/text_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_like"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:text="@string/artist_like"
            android:textColor="@color/colorAccent"
            android:clickable="true"/>

        <TextView
            android:id="@+id/text_like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_like"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:text="@string/artist_like_count"/>

        <ImageView
            android:id="@+id/img_dislike"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_toRightOf="@id/text_like_count"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_dislike"/>

        <TextView
            android:id="@+id/text_dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_dislike"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:text="@string/artist_dislike"
            android:textColor="@color/colorAccent"
            android:clickable="true"/>

        <TextView
            android:id="@+id/text_dislike_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_dislike"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:text="@string/artist_dislike_count"/>
    </RelativeLayout>

</LinearLayout>
